Add h2 integration test and change PK from Int to Long due to hibernate validation error